# slack-groupme-bridge

./: .gitignore  README.md  docker-compose.yml  linux-build.sh  nginx-upload-to-ecr.sh  slack-groupme-bridge.cabal  stack.yaml  upload-to-ecr.sh
app/: Main.hs
app-docker/: Dockerfile
nginx-docker/: nginx.conf
src/: Bridge.hs  Configuration.hs  Logging.hs  Types.hs  Utilities.hs
src/GroupMe/: Server.hs  Types.hs  Utilities.hs
src/Monitoring/: Sentry.hs
src/Monitoring/Sentry/: Configuration.hs
src/Slack/: Listener.hs  Types.hs  Utilities.hs
